# price_pred

./: Book3.csv  index.py  pyproject.toml  requirements.txt  vercel.json
templates/: calculate.html  results.html
